# wiki3-app

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  wiki3-app.code-workspace
.github/workflows/: build-macos.yml
docs/: execution-design-v1.md  execution-design.md  initial-request.md  integration-testing.md  networking.md
docs/wiki3-iconset/: Wiki3.icns
scripts/: build.sh  bump-version.sh  diagnose-loopback.sh  notarize.sh  release.sh
src/: devcontainer-engine.ts  index.html  main.ts
src-tauri/: Cargo.toml  Credits.html  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/resources/: .gitignore  README.md
src-tauri/src/: commands.rs  commands_devcontainer.rs  config.rs  diagnostics.rs  host.rs  lib.rs  main.rs  menu.rs  permissions.rs  publishing_commands.rs  tauri_sink.rs  window_state.rs
src-tauri/src/git/: ops.rs
src-tauri/src/providers/: mod.rs  traits.rs
src-tauri/src/providers/github/: auth.rs  mod.rs  publish.rs  repo.rs
src-tauri/src/tools/: apple_container.rs  commands.rs  devcontainer_config.js  devcontainer_config.rs  devcontainer_image.rs  git_probe.rs  installer.rs  mod.rs  registry.rs  runner.rs  uninstall.rs  updater.rs
src-tauri/src/wiki/: commands.rs  container_controls.rs  forwarder.rs  git_commands.rs  local_site.rs  log_stream.rs  loopback_host.rs  manager.rs  mod.rs  ports.rs  types.rs
src-tauri/src/workspace/: manager.rs  types.rs
src-tauri/tests/: bundled_deno.rs
src/lib/: bridge.ts  extension.ts  index.ts  (+3 more)
tests/: build-config.test.ts
(+16 files in other folders)
