[package]
name = "wiki3-app"
version = "0.3.0"
description = "Desktop app for running Wiki3.ai sites"
authors = ["Wiki3"]
edition = "2021"

[lib]
name = "wiki3_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json"] }
keyring = { version = "3", features = ["apple-native", "linux-native"] }
tokio = { version = "1", features = ["process", "fs"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tempfile = "3"

[dev-dependencies]
tempfile = "3"
